# alphafold-rs

./: Cargo.toml  plan.md
src/: evoformer.rs  fetch.rs  input.rs  main.rs  params.rs  structure_module.rs
