[package]
name = "alphafold-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
indicatif = "0.17"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ndarray = "0.16"
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
